# spellbind

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/pybind/: bool_values.py  emitters.py  event.py  float_values.py  int_values.py  observables.py  str_values.py  values.py
src/spellbind/: __init__.py  actions.py  bool_values.py  collections.py  emitters.py  event.py  float_collections.py  float_values.py  functions.py  int_collections.py  int_values.py  observable_collections.py  observable_sequences.py  observables.py  sequences.py  str_collections.py  str_values.py  values.py
tests/: conftest.py  test_boo_values.py  test_concatenate_str_values.py  test_constant.py  test_events.py  test_float_values.py  test_float_values_arithmatic.py  test_float_values_comparisons.py  test_int_values.py  test_int_values_arithmatic.py  test_int_values_comparisons.py  test_simple_variable.py  test_to_str_values.py  test_version.py
tests/str_values/: test_str_values.py
tests/test_collections/: test_empty_sequence.py  test_filtered_observable_bag.py  test_mapped_observable_bag.py
tests/test_events/: test_bi_events.py  test_bi_events_weak_observe.py  test_events.py  test_events_weak_observe.py  test_tri_events.py  test_tri_events_weak_observe.py  test_value_events.py  test_value_events_weak_observe.py  test_values_events_derive.py
tests/test_observable_lists/: test_empty_sequence.py  test_observable_list.py  test_observable_list_append.py  test_observable_list_clear.py  test_observable_list_del_item.py  test_observable_list_extend.py  (+5 more)
(+40 files in other folders)
