[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pybind"
dynamic = ["version"]
authors = [
    {name = "Georg Plaz", email = "georg.plaz@gmail.com"},
]
description = "A library which provides observable values to which other values can be bound"
requires-python = ">=3.10"
license = {text = "Proprietary"}


[project.urls]
homepage = "https://plaz.at"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = [
    "tests",
]
[tool.coverage.run]
source = ["src"]
omit = ["*/version.py"]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "flake8",
    "mypy",
]

#[tool.setuptools_scm]
#version_file = "src/py3d/version.py"